--- a/src/Hero.css
+++ b/src/Hero.css
@@ -97,7 +97,7 @@ h2.captiontitle {
   font-weight: 100;
   letter-spacing: .75vw;
   font-size: 4.5vw;
-  color: white;
+  color: #50fa7b;
   text-shadow: 0px 2px 2px rgba(150, 150, 150, .5);
   }
 }
